tests/files/lexer_tests/should_fail/073.cmdr
// Lexer should fail with an unterminated string (using double quotation)
a = "Unterminated string;